--- a/test/fixtures/repositories.yml
+++ b/test/fixtures/repositories.yml
@@ -1,9 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  state: MyString
+react:
+  name: react
+  state: created
+  language: JavaScript
+  user: sam
 
-two:
-  name: MyString
-  state: MyString
+vue:
+  name: vue
+  state: created
+  language: JavaScript
+  user: john
