--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@rails/webpacker": "5.4.3",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "eslint": "^8.25.0"
   },
   "version": "0.1.0",
   "devDependencies": {
