fix: load repository in the separate job

--- a/test/fixtures/repositories.yml
+++ b/test/fixtures/repositories.yml
@@ -5,9 +5,11 @@ react:
   full_name: react
   language: JavaScript
   user: sam
+  aasm_state: loaded_from_github
 
 vue:
   github_id: 2
   full_name: vue
   language: JavaScript
   user: john
+  aasm_state: loaded_from_github
